Docs: Fix whitespace on mobile sizing due to wide content (#1677)
### fix whitespace on mobile sizing due to wide content

This adds a table-layout: fixed rule for tables on smaller
screen sizes so that the contents don't overflow the container
element, and adds an overflow-wrap rule for long URLs in
code elements.

This also changes the table style in 00_usage.md to use h3 tags
and divs to style the usage snippets so that they don't expand
past the parent container. When using a table with table-layout: fixed,
the table header text would be squashed due to the width of the code
snippet part of the table row.

### dont quote anchor link

The #custom-requests link at the bottom of the custom endpoints
section was wrapped in quotes, which led the browser to load a
different page in search of https://octokit.github.io/rest.js/'#custom-requests'.

Removing the quotes makes it go to the custom-requests id tag on the
current page.

--- a/docs/src/components/layout.css
+++ b/docs/src/components/layout.css
@@ -131,6 +131,17 @@ header > button:focus {
   color: #1ca086;
 }
 
+/* Set table-layout: fixed for small screens where table contents can break out of their container */
+table {
+  table-layout: fixed;
+}
+
+@media (min-width: 55em) {
+  table {
+    table-layout: auto;
+  }
+}
+
 /* Hide the navigation toggle button on big screens, since it’s not needed */
 @media (min-width: 55em) {
   /* --wide-enough-for-two-columns */
@@ -157,4 +168,6 @@ main :not(pre) > code[class*="language-"] {
   background: #1b1f230d;
   text-shadow: none;
   font-size: 85%;
+  overflow-wrap: break-word;
+  word-break: break-word;
 }
